--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 'TailsOfTime/' filter=lfs diff=lfs merge=lfs -text
+TailsOfTime" filter=lfs diff=lfs merge=lfs -text
+TailsOfTime/Tails[[:space:]]of[[:space:]]Time[[:space:]]Setup.exe filter=lfs diff=lfs merge=lfs -text
